--- a/src/pages/Category/Category.module.scss
+++ b/src/pages/Category/Category.module.scss
@@ -11,7 +11,7 @@
 
 .headerSection {
   margin: 30px 0; text-align: center;
-  h1 { font-family: 'Montserrat'; color: $primary-green; font-size: 2rem; margin-bottom: 5px; }
+  h1 { color: $primary-green; font-size: 2rem; margin-bottom: 5px; }
   p { color: #888; }
 }
 
